--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -14,8 +14,9 @@
   <!--<link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'css/landing.css' %}" type="text/css">-->
 
-  <link rel="stylesheet" href="/static/css/base.css" type="text/css">
-  <link rel="stylesheet" href="/static/css/landing.css" type="text/css">
+  <link rel="stylesheet" type="text/css" href="/static/css/base.css">
+  <link rel="stylesheet" type="text/html" href="/static/css/landing.css">
+  <base href="/">
 
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
