--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -14,8 +14,8 @@
   <!--<link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'css/landing.css' %}" type="text/css">-->
 
-  <link rel="stylesheet" type="text/html" href="/static/css/base.css">
-  <link rel="stylesheet" type="text/html" href="/static/css/landing.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/base.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/landing.css">
   <base href="/">
 
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
