Changed default db to heroku db

--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -85,7 +85,17 @@
   </div>
 
 
-</section
+</section>
+
+<footer class="page-footer font-small" style="background-color:#343A40; color:#C7C7C7">
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a>Tristan Kast</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
 
 </body>
 </html>
