--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -7,95 +7,124 @@
   <title>{% block title %} Berl-Eat {% endblock %}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-
-  <!--<link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css">
-  <link rel="stylesheet" href="{% static 'css/landing.css' %}" type="text/css">-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 
   <link rel="stylesheet" type="text/css" href="/static/css/base.css">
-  <link rel="stylesheet" type="text/css" href="/static/css/landing.css">
   <base href="/">
-
-  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
 </head>
 <body>
+<div id="app">
 
-<!-- <section style="height:100vh; display:flex; align-items:center; justify-content:center; background-image: url({% static "images/berlinbackground.jpg" %}); background-repeat: no-repeat; background-size: cover; "> -->
-<section class="full-screen-section" id="landing_view" style="background-image: url('{% static "images/berlinbackground.jpg" %}')">
 
-  <div>
-  <div class="row mt-2 mb-2">
-    <div class="col-lg-3" style="display: table-cell; vertical-align: middle;">
-      <div class="form-group">
-        <label for="time-select">I want to have:</label>
-        <select class="form-control" id="time-select">
-          <option selected>Food</option>
-          <option>Breakfast</option>
-          <option>Brunch</option>
-          <option>Lunch</option>
-          <option>Coffee/Snack</option>
-          <option>Dinner</option>
-        </select>
+  <section class="full-screen-section flexxing" id="landingSection" style="background-image: url('{% static "images/berlinbackground.jpg" %}');">
+    <div>
+    <div class="row mt-2 mb-2">
+      <div class="col-lg-3" style="display: table-cell; vertical-align: middle;">
+        <div class="form-group">
+          <label for="time-select">I want to have:</label>
+          <select class="form-control" id="time-select" v-model="mealTime">
+            <option selected>Good Food</option>
+            <option v-for="option in mealTime_list" :value="option">[[option]]</option>
+          </select>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="form-group">
+          <label for="district-select">In:</label>
+          <select class="form-control" id="district-select" v-model="district">
+            <option select>Complete Berlin</option>
+            <option v-for="option in district_list" :value="option">[[option]]</option>
+          </select>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="form-group">
+          <label for="cuisine-select">My prefered cuisine is:</label>
+          <select class="form-control" id="cuisine-select" v-model="cuisine">
+            <option select>Tasty</option>
+            <option v-for="option in cuisine_list" :value="option">[[option]]</option>
+          </select>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="form-group">
+          <label for="extra-select">I'd love to have:</label>
+          <select class="form-control" id="extra-select" v-model="extra">
+            <option selected>A nice Time</option>
+            <option v-for="option in special_list" :value="option">[[option]]</option>
+          </select>
+        </div>
       </div>
     </div>
-    <div class="col-lg-3">
-      <div class="form-group">
-        <label for="district-select">In:</label>
-        <select class="form-control" id="district-select">
-          <option selected>Berlin</option>
-          <option>Friedrichshain</option>
-          <option>Mitte</option>
-          <option>Charlottenburg</option>
-        </select>
+
+    <div class="row mt-2 mb-2">
+      <button type="button" class="btn btn-dark btn-lg btn-block" id="SearchRestaurantButton" @click="searchRestaurant">Tell me where to eat!</button>
+    </div>
+    </div>
+  </section>
+
+
+  <hr v-if="restaurantSuggestion">
+  <section id="suggestionSection" class="full-screen-section flexxing">
+  <p v-if="restaurantSuggestion" id="suggestionJumbo" style="text-align:center">
+    [[restaurantSuggestion.name]], <br> [[restaurantSuggestion.district]]</p>
+  <div v-else >
+    <p id="dropMailJumbo" style="text-align:center">
+      We're always looking for new places to spend quality time. If you favorite place is missing please drop us a mail!
+    </p>
+  </div>
+  </section>
+
+
+  <hr v-if="restaurantSuggestionMVLink || restaurantSuggestionHomepage">
+  <section class="full-screen-section flexxing" id="restaurantLinks" v-show="restaurantSuggestionMVLink || restaurantSuggestionHomepage">
+    <div class="container-fluid fill">
+      <div class="row fill flexxing">
+        <div :class="restaurantSuggestionHomepage ? 'col-lg-6 fill' : 'col-lg-12 fill'" v-if="restaurantSuggestionMVLink">
+          <iframe class="embedded_window" v-bind:src=restaurantSuggestionMVLink style="width: 100%"></iframe>
+        </div>
+        <div :class="restaurantSuggestionMVLink ? 'col-lg-6 fill' : 'col-lg-12 fill'" v-if="restaurantSuggestionHomepage">
+          <iframe class="embedded_window" v-bind:src=restaurantSuggestionHomepage style="width: 100%"></iframe>
+        </div>
       </div>
     </div>
-    <div class="col-lg-3">
-      <div class="form-group">
-        <label for="cuisine-select">I have gravings for:</label>
-        <select class="form-control" id="cuisine-select">
-          <option selected>Everything</option>
-          <option>Asian Kitchen</option>
-          <option>Mexican Kitchen</option>
-          <option>German Kitchen</option>
-        </select>
+  </section>
+
+
+  <hr v-if="restaurantSuggestionMap">
+  <section class="full-screen-section flexxing" id="bigmap" v-if="restaurantSuggestionMap">
+    <div class="container-fluid fill">
+      <div class="row fill flexxing">
+        <iframe v-if="restaurantSuggestionMap" v-bind:src=[[restaurantSuggestionMap]] class="embedded_window" style="width:100%;" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
     </div>
-    <div class="col-lg-3">
-      <div class="form-group">
-        <label for="extra-select">I'd love to have:</label>
-        <select class="form-control" id="extra-select">
-          <option selected></option>
-          <option>Outdoor seating</option>
-          <option>Vegetarian options</option>
-          <option>Vegan options</option>
-        </select>
-      </div>
+  </section>
+
+
+  <footer class="page-footer font-small" style="background-color:#343A40; color:#C7C7C7">
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+      <a>Tristan Kast</a>
     </div>
-  </div>
-
-  <div class="row mt-2 mb-2">
-    <button type="button" class="btn btn-dark btn-lg btn-block">Tell me where to eat!</button>
-  </div>
-  </div>
+  </footer>
 
 
-</section>
+</div>
 
-<footer class="page-footer font-small" style="background-color:#343A40; color:#C7C7C7">
+<script src="{% static 'js/general.js' %}"></script>
 
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a>Tristan Kast</a>
-  </div>
-  <!-- Copyright -->
 
-</footer>
 
 </body>
 </html>
