--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -30,12 +30,68 @@
 <body>
 <div id="app">
 
+  {% if messages %}
+  {% for message in messages %}
+      <div class="alert alert-success mb-1 mt-1 " role="alert">
+        {{message}}
+      </div>
+    {% endfor %}
+  {% endif %}
+
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand abs" href="#"><img src="static/images/berl-icon.png" width="30" height="30"></a>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'about' %}">About</a>
+      </li>
+    </ul>
+  </nav>
+
+  <!--<nav class="navbar fixed-top navbar-expand-lg navbar-light">
+      <a class="navbar-brand abs" href="#">Navbar 1</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse" id="collapsingNavbar">
+          <ul class="navbar-nav">
+              <li class="nav-item active">
+                  <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="//codeply.com">Codeply</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#myAlert" data-toggle="collapse">Link</a>
+              </li>
+          </ul>
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                  <a class="nav-link" href="" data-target="#myModal" data-toggle="modal">About</a>
+              </li>
+          </ul>
+      </div>
+  </nav>-->
+
+  <!--<nav class="navbar fixed-top navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="#">Berl-Eat</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse order-3" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+      </ul>
+    </div>
+  </nav>-->
 
   <section class="full-screen-section flexxing" id="landingSection" style="background-image: url('{% static "images/berlinbackground.jpg" %}');">
     <div>
     <div class="row mt-2 mb-2">
       <div class="col-lg-3">
-        <div class="form-group">
+        <div class="form-group selection-dropdown">
           <label for="time-select">I want to have:</label>
           <select class="form-control" id="time-select" v-model="mealTime">
             <option selected>Good Food</option>
@@ -44,7 +100,7 @@
         </div>
       </div>
       <div class="col-lg-3">
-        <div class="form-group">
+        <div class="form-group selection-dropdown">
           <label for="district-select">Somewhere in:</label>
           <select class="form-control" id="district-select" v-model="district">
             <option select>Complete Berlin</option>
@@ -53,7 +109,7 @@
         </div>
       </div>
       <div class="col-lg-3">
-        <div class="form-group">
+        <div class="form-group selection-dropdown">
           <label for="cuisine-select">My prefered cuisine is:</label>
           <select class="form-control" id="cuisine-select" v-model="cuisine">
             <option select>Tasty</option>
@@ -62,7 +118,7 @@
         </div>
       </div>
       <div class="col-lg-3">
-        <div class="form-group">
+        <div class="form-group selection-dropdown">
           <label for="extra-select">I'd love to have:</label>
           <select class="form-control" id="extra-select" v-model="extra">
             <option selected>A nice Time</option>
@@ -80,23 +136,13 @@
 
 
   <hr v-if="restaurantSuggestion">
-  <section id="suggestionSection" class="full-screen-section flexxing">
-  <div v-if="restaurantSuggestion" >
-    <p id="suggestionJumbo" style="text-align:center">
-      [[restaurantSuggestion.name]], <br> [[restaurantSuggestion.district]]
-    </p>
-    <div style="padding-top: 15%">
-      <!--<p id="more-info-text" style="text-align:center">
-        More info!
-      </p>-->
-      <button type="submit" @click="toggle_showMoreInfo" style="background-color: Transparent;background-repeat:no-repeat;border: none;cursor:pointer;overflow: hidden;outline:none; margin:auto; padding:auto;"><img src="{% static 'images/downarrow.png' %}" style="height:15%; width: 15%;"></button>
+  <section id="suggestionSection" class="full-screen-section flexxing" v-if="restaurantSuggestion">
+    <div>
+      <p id="suggestionJumbo" style="text-align:center">
+        [[restaurantSuggestion.name]], <br> [[restaurantSuggestion.district]]
+      </p>
+      <button type="submit" @click="toggle_showMoreInfo" style="background-color: Transparent;background-repeat:no-repeat;border: none;cursor:pointer;overflow: hidden;outline:none; margin:auto; padding:auto;padding-top: 15%;"><img src="{% static 'images/downarrow.png' %}" style="height:15%; width: 15%;"></button>
     </div>
-  </div>
-  <div v-else >
-    <p id="dropMailJumbo" style="text-align:center">
-      We're always looking for new places to spend quality time. If you favorite place is missing please drop us a mail!
-    </p>
-  </div>
   </section>
 
   <hr v-if="restaurantSuggestionReview && showMoreInfo">
@@ -153,6 +199,47 @@
         <iframe v-if="restaurantSuggestionMap" v-bind:src=[[restaurantSuggestionMap]] class="embedded_window" style="width:100%;" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
     </div>
+  </section>
+
+  <hr v-if="showMoreInfo">
+  <section id="contactSection" class="full-screen-section flexxing" v-if="showMoreInfo">
+
+    <div>
+      <div class="row">
+        <div class="col-lg-1">
+        </div>
+        <div class="col-lg-10 contact-form">
+          <p id="dropMailJumbo" style="text-align:center">
+            We're always looking for new places to spend quality time. If your favorite place is missing please drop us a mail!
+          </p>
+          <form action="" method="post">
+            {% csrf_token %}
+              <div class="row">
+                  <div class="col-lg-6">
+                      {{ form.visitor_name.label }}
+                      {{ form.visitor_name }}
+                  </div>
+                  <div class="col-lg-6">
+                      {{ form.visitor_email.label }}
+                      {{ form.visitor_email }}
+                  </div>
+                  <div class="col-lg-12">
+                      {{ form.visitor_subject.label }}
+                      {{ form.visitor_subject }}
+                  </div>
+                  <div class="col-lg-12">
+                      {{ form.visitor_message.label }}
+                      {{ form.visitor_message }}
+                  </div>
+                  <button style="margin:0 auto;display:block;" type="submit">Send Message</button>
+              </div>
+          </form>
+        </div>
+        <div class="col-lg-1">
+        </div>
+      </div>
+    </div>
+
   </section>
 
 
