--- a/general/templates/general/about.html
+++ b/general/templates/general/about.html
@@ -42,15 +42,19 @@
   <section class="full-screen-section flexxing" id="about">
     <div style="margin-left:3%; margin-right:3%;">
           <p id="about-text" style="text-align:center; text-align: justify;">
-              Hi! My name is Tristan and I'm the developer of berl-eat. The idea for this project was born when I moved to Berlin with my girlfriend at the beginning of the year and we were overwhelmed by the enormous number of incredibly good restaurants. Since we wanted to visit the best places first, we did some research and ended up with a very very long list of places to choose from. Therefore I built a small program to pick a restaurant for us based on the cuisine whe would like to have and the location of the restaurant. I thought that such a program could certainly be useful to other people as well. For example if you have landed in a district and don't want to scroll through 100 google maps first to find a place to eat.               Personally, I'm not a web developer at all, so the site is far from being perfect and there are certainly some developers who could have done a better job. But that's not what it's about, it's about having a good time with a good meal in this great city.
+              Hi! My name is Tristan and I'm the developer of berl-eat. The idea for this project was born when I moved together with with my girlfriend to Berlin at the beginning of the year. We were overwhelmed by the enormous number of incredibly good restaurants! Since we wanted to visit the best places first, we did some research and ended up with a very very long list of places to choose from. Therefore I built a small program to pick a restaurant for us based on the cuisine whe would like to have and the location of the restaurant. I thought that such a gadget could certainly be useful to other people as well. For example if you find yourself in a not well known district and you don't want to scroll through endless google maps entries first to find a place to eat. Personally, I'm not a web developer at all, so the website is far from being perfect and there are certainly lots of developers who could have done a better job. But that's not what this is about, it's about having a good time with a good meal in this great city.
           </p>
           <p id="about-text" style="text-align:center; text-align: justify;">
-              If I like a restaurant in particular I try to write a short comment on my own and in any case I link the homepage of the restaurant and mark it in GoogleMaps.
-              The website 'mitVergnügen.de' helped me a lot to find these restaurants and if they have a post about the place I'll link it too.
+              If I like a restaurant in particular I try to write a short comment on my own but in any case I link the homepage of the restaurant and mark its position in GoogleMaps and put the link up as well.
+              Of course, this is not an in-depth restaurant guide for Berlin by any means. There are a lot of awesome websites which do this already, like 'mitVergnügen.de' or 'tripadvisor'. This is just a small gadget for you to pick a nice place if you don't want to have to think too much.
           </p>
           <p id="about-text" style="text-align:center; text-align: justify;">
-              I don't get any sponsoring or money in general, so these suggestions are based only on recommendations or my own experiences.  If you know a nice place or are an owner yourself please do not hesistate to drop me an email and I will be happy to test and also add your place.
+              I don't get any sponsoring or money for this, so these suggestions are based only on recommendations or my own experiences.  If you know a nice place or are an owner yourself please do not hesistate to drop me an email and I will be happy to test and also add your place.
+          </p>
+          <p id="about-text" style="text-align:center; text-align: justify;">
               So much from me, happy restaurant testing, have a nice meal and an even nicer time,
+          </p>          
+          <p id="about-text" style="text-align:center; text-align: justify;">
               Tristan
           </p>
     </div>
