--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,57 +1,33 @@
 .fill {min-height:100%;height:100%;margin-left:0;margin-right:0;padding-left:0;padding-right:0;}
 .flexxing{display:flex;align-items:center;justify-content:center;}
 .embedded_window{border:0;height:100%;}
-#landingSection{background-repeat: no-repeat; background-size: cover;}
-#suggestionJumbo{font-family:'Tangerine',serif;font-size:96px;}
-#more-info-text{font-family:'Tangerine',serif;font-size:36px;}
-#dropMailJumbo{font-family:'Tangerine',serif;font-size:62px;}
-#suggestionReview{font-family:'Montserrat',serif;font-size:26px;}
-#about-text{font-family:'Montserrat',serif;font-size:20px;}
-
-@media only screen and (min-width:600px){
-	.full-screen-section{height:100vh;}
-	.quarter-screen-section{height:25vh;}
-	.half-screen-section{height:50vh;}
-}
-@media only screen and (max-width:600px){
-	.full-screen-section{height:100vh;}
-	.quarter-screen-section{height:100vh;}
-	.half-screen-section{height:100vh;}
-	#bigmap{visibility:hidden;}
-}
+.full-screen-mobil{height:100vh;}
 
 .navbar-inner {
     background:transparent;
-}
-
-.contact-form h4 {
-	font-weight: 600;
-	color: #111111;
-	text-transform: uppercase;
-	margin-bottom: 47px;
 }
 .contact-form form input {
 	width: 100%;
 	height: 51px;
 	border: 1px solid #e1e1e1;
-	padding-left: 20px;
+	padding-left: 2em;
 	font-size: 16px;
-	margin-bottom: 30px;
+	margin-bottom: 3em;
 }
 .contact-form form textarea {
 	width: 100%;
 	height: 150px;
 	border: 1px solid #e1e1e1;
-	padding-left: 20px;
+	padding-left: 2em;
 	font-size: 16px;
-	padding-top: 10px;
-	margin-bottom: 22px;
+	padding-top: 1em;
+	margin-bottom: 2em;
 	resize: none;
 }
 .contact-form form button {
 	font-size: 14px;
 	color: #ffffff;
-	padding: 10px 33px;
+	padding: 1em 3em;
 	display: inline-block;
 	background: -webkit-gradient(linear, left top, right top, from(#eb3c5a), to(#f67831));
 	background: -o-linear-gradient(left, #eb3c5a, #f67831);
@@ -59,39 +35,31 @@
 	border: none;
 	text-transform: uppercase;
 }
-.contact-form form input::-webkit-input-placeholder {
-	color: #9a9a9a;
+
+#landingSection{background-repeat: no-repeat; background-size: cover;}
+#suggestionJumbo{font-family:'Tangerine',serif;font-size:96px;}
+#more-info-text{font-family:'Tangerine',serif;font-size:36px;}
+#dropMailJumbo{font-family:'Tangerine',serif;font-size:62px;}
+#suggestionReview{font-family:'Montserrat',serif;font-size:26px;}
+#about-text{font-family:'Montserrat',serif;font-size:20px;}
+
+
+@media only screen and (min-width:991px){
+	.full-screen-section{height:100vh;}
+	.quarter-screen-section{height:25vh;}
+	.half-screen-section{height:50vh;}
 }
-.contact-form form input::-moz-placeholder {
-	color: #9a9a9a;
-}
-.contact-form form input:-ms-input-placeholder {
-	color: #9a9a9a;
-}
-.contact-form form input::-ms-input-placeholder {
-	color: #9a9a9a;
-}
-.contact-form form input::placeholder {
-	color: #9a9a9a;
-}
-.contact-form form input:focus {
-	color: #111111;
-}
-.contact-form form textarea::-webkit-input-placeholder {
-	color: #9a9a9a;
-}
-.contact-form form textarea::-moz-placeholder {
-	color: #9a9a9a;
-}
-.contact-form form textarea:-ms-input-placeholder {
-	color: #9a9a9a;
-}
-.contact-form form textarea::-ms-input-placeholder {
-	color: #9a9a9a;
-}
-.contact-form form textarea::placeholder {
-	color: #9a9a9a;
-}
-.contact-form form textarea:focus {
-	color: #111111;
+@media only screen and (max-width:991px){
+	.selection-dropdown{
+		margin-left: 3em;
+		margin-right: 3em;
+	}
+	#SearchRestaurantButton{
+		margin-left: 3em;
+		margin-right: 3em;
+	}
+	.contact-form form{
+		padding-left: 3em;
+		padding-right: 3em;
+	}
 }
