Splitted css files into multiple

--- a/general/templates/general/about.html
+++ b/general/templates/general/about.html
@@ -22,6 +22,7 @@
 
 
   <link rel="stylesheet" type="text/css" href="/static/css/base.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/about.css">
   <base href="/">
 
 
@@ -39,7 +40,7 @@
   </nav>
 
 
-  <section class="full-screen-section flexxing" id="about">
+  <section class="full-screen-section flexxing" id="about-section">
     <div style="margin-left:3%; margin-right:3%;">
           <p id="about-text" style="text-align:center; text-align: justify;">
               Hi! My name is Tristan and I'm the developer of berl-eat. The idea for this project was born when I moved together with with my girlfriend to Berlin at the beginning of the year. We were overwhelmed by the enormous number of incredibly good restaurants! Since we wanted to visit the best places first, we did some research and ended up with a very very long list of places to choose from. Therefore I built a small program to pick a restaurant for us based on the cuisine whe would like to have and the location of the restaurant. I thought that such a gadget could certainly be useful to other people as well. For example if you find yourself in a not well known district and you don't want to scroll through endless google maps entries first to find a place to eat. Personally, I'm not a web developer at all, so the website is far from being perfect and there are certainly lots of developers who could have done a better job. But that's not what this is about, it's about having a good time with a good meal in this great city.
@@ -53,7 +54,7 @@
           </p>
           <p id="about-text" style="text-align:center; text-align: justify;">
               So much from me, happy restaurant testing, have a nice meal and an even nicer time,
-          </p>          
+          </p>
           <p id="about-text" style="text-align:center; text-align: justify;">
               Tristan
           </p>
