--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -27,6 +27,7 @@
 
 
   <link rel="stylesheet" type="text/css" href="/static/css/base.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/landing.css">
   <base href="/">
 
 
