--- a/static/css/about.css
+++ b/static/css/about.css
@@ -1,6 +1,7 @@
 #about-text{font-family:'Montserrat',serif;font-size:20px;}
 
-@media only screen and (min-width:991px){
+/* For mobile */
+@media only screen and (max-width:991px){
   about-section{
     padding: 3em;
   }
