--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -107,12 +107,12 @@
       <p id="suggestionJumbo" style="text-align:center; padding-right:2%; padding-left:2%">
         [[restaurantSuggestion.name]], <br> [[restaurantSuggestion.district]]
       </p>
-      <button v-if="moreInfoAvailable" type="submit" @click="toggle_showMoreInfo" style="background-color: Transparent;background-repeat:no-repeat;border: none;cursor:pointer;overflow: hidden;outline:none; margin:auto; padding:auto;padding-top: 15%;"><img src="{% static 'images/downarrow.png' %}" style="height:15%; width: 15%;"></button>
+      <button v-if="moreInfoAvailable && !showMoreInfo" type="submit" @click="toggle_showMoreInfo" style="background-color: Transparent;background-repeat:no-repeat;border: none;cursor:pointer;overflow: hidden;outline:none; margin:auto; padding:auto;padding-top: 15%;"><img src="{% static 'images/downarrow.png' %}" style="height:15%; width: 15%;"></button>
     </div>
   </section>
 
   <hr v-if="restaurantSuggestionReview && showMoreInfo">
-  <section class="full-screen-section flexxing" id="restaurantLinks1" v-show="restaurantSuggestionReview && showMoreInfo">
+  <section class="full-screen-section flexxing" id="restaurantSuggestionSection" v-show="restaurantSuggestionReview && showMoreInfo">
     <div style="margin-left:3%; margin-right:3%;">
           <p id="suggestionReview" style="text-align:center">
             [[restaurantSuggestionReview]]
@@ -121,14 +121,19 @@
   </section>
 
   <hr v-if="restaurantSuggestionHomepage && showMoreInfo">
-  <section class="full-screen-section flexxing" id="restaurantLinks2" v-show="restaurantSuggestionHomepage && showMoreInfo">
-    <div class="container-fluid fill" style="margin-left:3%; margin-right:3%; margin-top:3%; margin-bottom:3%;">
+  <section class="full-screen-section flexxing" id="restaurantWebsiteSection" v-show="restaurantSuggestionHomepage && showMoreInfo">
+
+    <button type="button" class="btn btn-dark btn-lg btn-block" id="toggleRestaurantWebsite_button" @click="toggleRestaurantWebsite">Display Restaurant Website</button>
+
+    <div class="container-fluid fill" id="restaurantWebsite">
       <div class="row fill flexxing">
         <div class="col-lg-12 fill">
           <iframe class="embedded_window" v-bind:src=restaurantSuggestionHomepage style="width: 100%"></iframe>
         </div>
       </div>
     </div>
+
+
   </section>
 
   <!--<hr v-if="restaurantSuggestionMVLink && showMoreInfo">
