--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -35,6 +35,7 @@
 #suggestionReview{font-family:'Montserrat',serif;font-size:26px;}
 
 
+
 /* For mobile */
 @media only screen and (max-width:991px){
 	.selection-dropdown{
@@ -50,9 +51,30 @@
 		padding-right: 3em;
 	}
 	#dropMailJumbo{
-		margin-left: 2em;
-		margin-right: 2em;
+		margin-left: 1em;
+		margin-right: 1em;
     font-size:40px;
+	}
+	#toogleRestaurantWebsite_button{
+		display:inline;
+	}
+	#restaurantWebsite{
+		display: none;
+		margin-top:3%;
+		margin-bottom:3%;
+	}
+}
 
+/* For desktop screens */
+@media only screen and (min-width:991px){
+	#dropMailJumbo{
+		padding-bottom: 2em;
+	}
+	#restaurantWebsite{
+		margin-left:3%;
+		margin-right:3%;
+	}
+	#toogleRestaurantWebsite_button{
+		display: none;
 	}
 }
