compute district and cuisine list dynamically

--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -76,7 +76,7 @@
       </div>
       <div class="col-lg-3">
         <div class="form-group selection-dropdown">
-          <label for="cuisine-select">My prefered cuisine is:</label>
+          <label for="cuisine-select">My prefered cuisine:</label>
           <select class="form-control" id="cuisine-select" v-model="cuisine">
             <option select>Tasty</option>
             <option v-for="option in cuisine_list" :value="option">[[option]]</option>
