--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,7 +1,6 @@
 .fill {min-height:100%;height:100%;margin-left:0;margin-right:0;padding-left:0;padding-right:0;}
 .flexxing{display:flex;align-items:center;justify-content:center;}
-.embedded_window{border:0;height:100%;}
-.full-screen-mobil{height:100vh;}
+.full-screen-mobile{height:100vh;}
 .navbar-inner {background:transparent;}
 
 /* For desktop screens */
