Restyled the info link buttons

--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -124,16 +124,16 @@
   <section class="flexxing" id="restaurantLinks" v-show="showMoreInfo">
     <div class="row">
       <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionHomepage">
-        <a :href="restaurantSuggestionHomepage" class="btn btn-outline-dark" role="button" aria-disabled="true">Homepage</a>
+        <a :href="restaurantSuggestionHomepage" class="btn btn-outline-dark btn-lg btn-block infoLink-button" role="button" aria-disabled="true">Homepage</a>
       </div>
       <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionMVLink">
-        <a :href="restaurantSuggestionMVLink" class="btn btn-outline-dark" role="button" aria-disabled="true">mitVergnügen</a>
+        <a :href="restaurantSuggestionMVLink" class="btn btn-outline-dark btn-lg btn-block infoLink-button" role="button" aria-disabled="true">mitVergnügen</a>
       </div>
       <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionTripadvisor">
-        <a :href="restaurantSuggestionMVLink" class="btn btn-outline-dark" role="button" aria-disabled="true">Tripadvisor</a>
+        <a :href="restaurantSuggestionMVLink" class="btn btn-outline-dark btn-lg btn-block infoLink-button" role="button" aria-disabled="true">Tripadvisor</a>
       </div>
       <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionFacebook">
-        <a :href="restaurantSuggestionMVLink" class="btn btn-outline-dark" role="button" aria-disabled="true">Facebook</a>
+        <a :href="restaurantSuggestionMVLink" class="btn btn-outline-dark btn-lg btn-block infoLink-button" role="button" aria-disabled="true">Facebook</a>
       </div>
     </div>
   </section>
