--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -42,6 +42,11 @@
 	text-transform: uppercase;
 }
 
+.infoLink-button{
+	margin-top: 1em;
+	margin-bottom: 1em;
+}
+
 #landingSection{background-repeat: no-repeat; background-size: cover;}
 #suggestionJumbo{font-family:'Tangerine',serif;font-size:96px;}
 #more-info-text{font-family:'Tangerine',serif;font-size:36px;}
