Added credentials for icons and pictures to the footer

--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -191,8 +191,10 @@
 
   <footer class="footer">
     <div class="text-center py-3">
-      <span class="text-muted">© 2020 Copyright:
-        <a>Tristan Kast</a></span>
+      <p class="text-muted">© 2020 Copyright:Tristan Kast</p>
+      <p class="text-muted">
+         <a class="footer-link" href="https://icons8.com/icon/41494/berliner-fernsehturm">Berliner Fernsehturm icon by Icons8</a> | <span>Berlin Title Photo by <a class="footer-link" href="https://unsplash.com/@purzlbaum?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText"> Claudio Schwarz | @purzlbaum</a> on <a class="footer-link" href="https://unsplash.com/s/photos/berlin?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+      </p>
     </div>
   </footer>
 
