--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,3 +9,40 @@
 	.quarter-screen-section{height:25vh;}
 	.half-screen-section{height:50vh;}
 }
+
+.footer-link:link{
+	color: #6C767C;
+}
+
+.footer-link:visited{
+	color: #6C767C;
+}
+
+.footer-link:hover{
+	color: #6C767C;
+}
+
+.footer-link:active{
+	color: #6C767C;
+}
+
+a:link
+{
+   color: #000000;
+   text-decoration: none;
+}
+a:visited
+{
+   color: #000000;
+   text-decoration: none;
+}
+a:hover
+{
+   color: #000000;
+   text-decoration: none;
+}
+a:active
+{
+   color: #000000;
+   text-decoration: none;
+}
