--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -54,6 +54,7 @@
   </nav>
 
   <section class="full-screen-section full-screen-mobile flexxing" id="landingSection" style="background-image: url('{% static "images/berlinbackground.jpg" %}');">
+    <div>
     <div class="row mt-2 mb-2">
       <div class="col-lg-3">
         <div class="form-group selection-dropdown">
@@ -95,6 +96,7 @@
 
     <div class="row mt-4 mb-2">
       <button type="button" class="btn btn-dark btn-lg btn-block" id="SearchRestaurantButton" @click="searchRestaurant">Tell me where to eat!</button>
+    </div>
     </div>
   </section>
 
