--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -126,7 +126,7 @@
       <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionHomepage" class="link-logo-container">
         <!--<a :href="restaurantSuggestionHomepage" class="btn btn-outline-dark btn-lg btn-block infoLink-button" role="button" aria-disabled="true">Homepage</a>-->
         <a :href="restaurantSuggestionHomepage" role="button" aria-disabled="true">
-          <img alt="Homepage" src="static/images/logo_homepage.png" width="80" height="80">
+          <img style="padding:auto;" alt="Homepage" src="static/images/logo_homepage.png" width="80" height="80">
         </a>
       </div>
       <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionMV" class="link-logo-container">
