Changed some stuff

--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -125,8 +125,8 @@
     <div class="row" style="width:100%">
       <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionHomepage" class="link-logo-container">
         <!--<a :href="restaurantSuggestionHomepage" class="btn btn-outline-dark btn-lg btn-block infoLink-button" role="button" aria-disabled="true">Homepage</a>-->
-        <a :href="restaurantSuggestionHomepage" role="button" aria-disabled="true">
-          <img style="padding:auto;" alt="Homepage" src="static/images/logo_homepage.png" width="80" height="80">
+        <a style="margin:auto;" :href="restaurantSuggestionHomepage" role="button" aria-disabled="true">
+          <img alt="Homepage" src="static/images/logo_homepage.png" width="80" height="80">
         </a>
       </div>
       <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionMV" class="link-logo-container">
