--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -123,10 +123,10 @@
   <hr v-if="showMoreInfo">
   <section class="flexxing" id="restaurantLinks" v-show="showMoreInfo">
     <div class="row" style="width:100%">
-      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionHomepage" class="link-logo-container">
+      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionHomepage" class="link-logo-container flexxing">
         <!--<a :href="restaurantSuggestionHomepage" class="btn btn-outline-dark btn-lg btn-block infoLink-button" role="button" aria-disabled="true">Homepage</a>-->
-        <a style="margin:auto; padding:auto;" :href="restaurantSuggestionHomepage" role="button" aria-disabled="true">
-          <img style="margin:auto; padding:auto;" alt="Homepage" src="static/images/logo_homepage.png" width="80" height="80">
+        <a :href="restaurantSuggestionHomepage" role="button" aria-disabled="true">
+          <img alt="Homepage" src="static/images/logo_homepage.png" width="80" height="80">
         </a>
       </div>
       <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionMV" class="link-logo-container">
