Centered the icons for the links

--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -129,22 +129,22 @@
           <img alt="Homepage" src="static/images/logo_homepage.png" width="80" height="80">
         </a>
       </div>
-      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionMV" class="link-logo-container">
+      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionMV" class="link-logo-container flexxing">
         <a :href="restaurantSuggestionMV" role="button" aria-disabled="true">
           <img alt="mitVergnuegen" src="static/images/logo_MitVergnuegen.png" width="80" height="80">
         </a>
       </div>
-      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionTripadvisor" class="link-logo-container">
+      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionTripadvisor" class="link-logo-container flexxing">
         <a :href="restaurantSuggestionTripadvisor" role="button" aria-disabled="true">
           <img alt="Tripadvisor" src="static/images/logo_tripadvisor.png" width="80" height="80">
         </a>
       </div>
-      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionFacebook" class="link-logo-container">
+      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionFacebook" class="link-logo-container flexxing">
         <a :href="restaurantSuggestionFacebook" role="button" aria-disabled="true">
           <img alt="Facebook" src="static/images/logo_fb.png" width="80" height="80">
         </a>
       </div>
-      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionInstagram" class="link-logo-container">
+      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestionInstagram" class="link-logo-container flexxing">
         <a :href="restaurantSuggestionInstagram" role="button" aria-disabled="true">
           <img alt="Instagram" src="static/images/logo_ig.png" width="80" height="80">
         </a>
