--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,8 @@
+hr{
+	margin-top: 0.5vh;
+  margin-bottom: 0.5vh;
+}
+
 .fill {min-height:100%;height:100%;margin-left:0;margin-right:0;padding-left:0;padding-right:0;}
 .flexxing{display:flex;align-items:center;justify-content:center;}
 .full-screen-mobile{height:100vh;}
