Centered background image

--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -53,7 +53,7 @@
     </ul>
   </nav>
 
-  <section class="full-screen-section full-screen-mobile flexxing" id="landingSection" style="background-image: url('{% static "images/berlinbackground.jpg" %}');">
+  <section class="full-screen-section full-screen-mobile flexxing" id="landingSection">
     <div>
     <div class="row mt-2 mb-2">
       <div class="col-lg-3">
