playing around with the scroll behavior

--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -95,7 +95,7 @@
     </div>
 
     <div class="row mt-4 mb-2">
-      <button type="button" class="btn btn-dark btn-lg btn-block" id="SearchRestaurantButton" @click="searchRestaurant">Tell me where to eat!</button>
+      <button type="button" class="btn btn-dark btn-lg btn-block" id="SearchRestaurantButton" @click="searchRestaurant" href="#suggestionSection">Tell me where to eat!</button>
     </div>
     </div>
   </section>
