--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -59,9 +59,9 @@
 	background-attachment: fixed;
 
 }
-#suggestionJumbo{font-family:'Tangerine',serif;font-size:96px;}
-#more-info-text{font-family:'Tangerine',serif;font-size:36px;}
-#dropMailJumbo{font-family:'Tangerine',serif;font-size:50px;}
+#suggestionJumbo{font-family:'Montserrat',serif;font-size:96px;}
+#more-info-text{font-family:'Montserrat',serif;font-size:36px;}
+#dropMailJumbo{font-family:'Montserrat',serif;font-size:50px;}
 #suggestionReview{font-family:'Montserrat',serif;font-size:26px;}
 #embeddedMap{
 	border:0;
